added the other pages, linked the pages together and finished navbar functionality

--- a/about.html
+++ b/about.html
@@ -24,17 +24,17 @@
 
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="./home.html">Home</a>
+                </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="./about.html">About<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="./blog.html">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
+                    <a class="nav-link" href="./contact_us.html">Contact Us</a>
                 </li>
             </ul>
         </div>
@@ -43,7 +43,7 @@
     <main role="main" class="container">
 
         <div class="starter-template">
-            <h1>Bootstrap starter template</h1>
+            <h1>This is the About Page!</h1>
             <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text
                 and a mostly barebones HTML document.</p>
         </div>
