--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/template.css" />
-    <title>Hello, world!</title>
+    <title>Cat Breeds 101</title>
 </head>
 
 <body>
@@ -43,9 +43,12 @@
     <main role="main" class="container">
 
         <div class="starter-template">
-            <h1>This is the Home Page</h1>
-            <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text
-                and a mostly barebones HTML document.</p>
+            <h1>Hello All You Cool Cats And Kittens!</h1>
+            <img src="./images/wave.gif"/>
+            <p class="lead">Welcome to my Cat Blog! I'll be posting about different cat breeds so that
+                you can learn more about your purrfect feline companions! Be on the lookout for some cool posts
+                in the blog tab!
+            </p>
         </div>
 
     </main><!-- /.container -->
