added some images and finished up the about and contact pages

--- a/about.html
+++ b/about.html
@@ -43,9 +43,12 @@
     <main role="main" class="container">
 
         <div class="starter-template">
-            <h1>This is the About Page!</h1>
-            <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text
-                and a mostly barebones HTML document.</p>
+            <h1>About Me!</h1>
+            <img src = "./images/me.gif">
+            <p class="lead">Hello I'm Angela and this is my sample HTML website project! I was born
+                and raised in Ohio and went to school for Computer Science. In my spare time I read and garden.
+                It's a purrleasure to meet you! :)
+            </p>
         </div>
 
     </main><!-- /.container -->
