--- a/contact_us.html
+++ b/contact_us.html
@@ -43,10 +43,24 @@
     <main role="main" class="container">
 
         <div class="starter-template">
-            <h1>This is the Contact Us Page!</h1>
-            <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text
-                and a mostly barebones HTML document.</p>
+            <h1>Contact Us!</h1>
+            <p class="lead">Got any cat questions that need answering or just want to leave some feedback?
+                Fill out the form below and I'll get back to you as soon as I can!
+            </p>
+            <img src = "./images/contact.gif">
         </div>
+        <form>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Your Email Address</label>
+              <input type="email" class="form-control" id="emailAddress" placeholder="name@example.com">
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlTextarea1">Questions/Feedback</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+            </div>
+            <button type="button" class="btn btn-primary">Submit</button>
+          </form>
+
 
     </main><!-- /.container -->
 
