--- a/contact_us.html
+++ b/contact_us.html
@@ -49,23 +49,30 @@
             </p>
             <img src = "./images/contact.gif">
         </div>
-        <form>
+        <form name = "contactForm" onsubmit="return validateForm()" action="./home.html" method="post">
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Your Name</label>
+                <input type="text" class="form-control" id="name" placeholder="Enter your Name">
+                <div class="error" id="nameErr"></div>
+              </div>
             <div class="form-group">
               <label for="exampleFormControlInput1">Your Email Address</label>
-              <input type="email" class="form-control" id="emailAddress" placeholder="name@example.com">
+              <input type="text" class="form-control" id="emailAddress" placeholder="name@example.com">
+              <div class="error" id="emailErr"></div>
             </div>
             <div class="form-group">
               <label for="exampleFormControlTextarea1">Questions/Feedback</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+              <textarea class="form-control" id="feedback" rows="5"></textarea>
+              <div class="error" id="feedbackErr"></div>
             </div>
-            <button type="button" class="btn btn-primary">Submit</button>
+            <input type="submit" value="Submit" class = "btn btn-primary">
           </form>
 
 
     </main><!-- /.container -->
 
 
-
+    <script src = "./js/contact_us.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
